--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,45 @@
 * {
-   /* margin: 0; 
+    /* margin: 0; 
    padding: 0; */
-   font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
+
 body {
-    padding-bottom: 30em;
+    padding-bottom: 0.3%;
 }
+
 header {
     background-color: white;
     text-align: center;
     color: #333;
 }
+
 #nav {
     background-color: #333 !important;
     margin-top: 0 !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
 }
+
 img {
     width: 50px;
 }
+
 #text {
     color: white;
     font-size: 150%;
 }
+
 .btn-primary {
     background-color: #333 !important;
 }
+
 #img {
     object-fit: cover !important;
     width: 100% !important;
     height: 50em !important;
 }
+
 #video {
     margin-top: 0;
     margin-bottom: 0;
@@ -39,6 +47,7 @@ img {
     width: 100% !important;
     height: 50em !important;
 }
+
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 1em;
@@ -46,24 +55,36 @@ img {
     left: 10em !important;
     right: 10em !important;
 }
-#conheToca {
+
+#conheToca1 {
     padding: 3em;
     text-align: center;
     background-color: #333 !important;
     color: white;
 }
-#navToca { 
+
+#conheToca2 {
+    padding: 3em;
+    padding-bottom: 6% !important;
+    text-align: center;
+    background-color: #333 !important;
+    color: white;
+}
+
+#navToca {
     margin-top: 2em;
     margin-bottom: 2em;
     margin-left: 1% !important;
-    margin-right: 1% !important;  
+    margin-right: 1% !important;
     justify-content: center !important;
 }
+
 #imgTurismo {
     width: 100%;
     border: solid white 2px;
     border-radius: 1em;
 }
+
 #section-turismo {
     border: 2px solid white;
     border-radius: 1em;
@@ -75,25 +96,52 @@ img {
     width: 400px;
     margin: 0% 1% !important;
 }
+
 #card-body {
     align-items: center;
     width: 105%;
 }
+
 .card-text {
     text-align: justify;
 }
+
+#contatos {
+    margin-top: 2% !important;
+    border-radius: 1em !important;
+    background-color: #444 !important;
+}
+
+#contatosForm {  
+    text-align: center;
+    color: white;
+    padding: 1%;
+}
+
+#maps {
+    width: 100% !important;
+    height: 90% !important;
+}
+
 footer {
     text-align: center;
     background-color: #333;
     padding: 1em;
     color: white;
 }
+
 @media (min-width:200px) and (max-width:767px) {
+    body {
+        padding-bottom: 25%;
+    }
+
+
     #img {
         object-fit: cover !important;
-        width: 100%!important;
+        width: 100% !important;
         height: 25em !important;
     }
+
     #video {
         margin-top: 0;
         margin-bottom: 0;
@@ -101,6 +149,7 @@ footer {
         width: 100% !important;
         height: 25em !important;
     }
+
     #conheToca {
         padding: 3em;
         text-align: center !important;
@@ -109,6 +158,7 @@ footer {
         background-color: #333 !important;
         color: white;
     }
+
     .carousel-caption {
         background-color: rgba(0, 0, 0, 0.5);
         border-radius: 1em;
@@ -118,13 +168,44 @@ footer {
         left: 100em !important;
         right: 100em !important;
     }
+
+    #contatos {
+        margin-top: 10% !important;
+        border-radius: 1em !important;
+        background-color: #444 !important;
+        font-size: 60%;
+    }
+    
+    #contatosForm {  
+        text-align: center;
+        color: white;
+        padding: 5% !important;
+    }
+
+    #maps {
+        width: 90% !important;
+        height: 70% !important;
+    }
+
+    #whatsapp {
+        width: 20%;
+    }
+    #instagram {
+        width: 19%;
+    }
 }
+
 @media (min-width:768px) and (max-width:1524px) {
+    body {
+        padding-bottom: 6%;
+    }
+
     #img {
         object-fit: cover !important;
-        width: 100%!important;
+        width: 100% !important;
         height: 40em !important;
     }
+
     #video {
         margin-top: 0;
         margin-bottom: 0;
@@ -132,6 +213,7 @@ footer {
         width: 100% !important;
         height: 40em !important;
     }
+
     #conheToca {
         padding: 3em;
         text-align: center !important;
@@ -140,6 +222,7 @@ footer {
         background-color: #333 !important;
         color: white;
     }
+
     .carousel-caption {
         background-color: rgba(0, 0, 0, 0.5);
         border-radius: 1em;
@@ -148,5 +231,30 @@ footer {
         padding: 1em !important;
         left: 10em !important;
         right: 10em !important;
+    }
+
+    #contatos {
+        margin-top: 5% !important;
+        border-radius: 1em !important;
+        background-color: #444 !important;
+        font-size: 60%;
+    }
+    
+    #contatosForm {  
+        text-align: center;
+        color: white;
+        padding: 5%;
+    }
+
+    #maps {
+        width: 100% !important;
+        height: 90% !important;
+    }
+
+    #whatsapp {
+        width: 20%;
+    }
+    #instagram {
+        width: 19%;
     }
 }
